# generative-AAC

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
gAAC/: __init__.py  keyword_to_prompt.py  prompt_to_image.py
gAAC/prompts/: keyword_to_prompt.md
